# pp-up

./: .gitignore  CHANGELOG.md  Makefile  pyproject.toml
pp_up/: __main__.py  func.py
